// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacyStripeFeeStructure constructor returns the expected structure when passing both 1`] = `
LegacyStripeFeeStructure {
  "props": {
    "flatFee": 30,
    "percentageFee": 0.02,
  },
}
`;

exports[`LegacyStripeFeeStructure constructor returns the expected structure when passing flatFee 1`] = `
LegacyStripeFeeStructure {
  "props": {
    "flatFee": 30,
    "percentageFee": 0,
  },
}
`;

exports[`LegacyStripeFeeStructure constructor returns the expected structure when passing percentFee 1`] = `
LegacyStripeFeeStructure {
  "props": {
    "flatFee": 0,
    "percentageFee": 0.02,
  },
}
`;
